--- a/.github/workflows/gotest.yml
+++ b/.github/workflows/gotest.yml
@@ -17,7 +17,7 @@ jobs:
           cache: true
 
       - name: Build
-        run: go build ./...
+        run: sudo go build ./...
 
       - name: Test
-        run: go test ./...
+        run: sudo go test ./...
