--- a/.github/workflows/gotest.yml
+++ b/.github/workflows/gotest.yml
@@ -8,12 +8,12 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.21.4
+          go-version: '^1.21.4'
           cache: true
 
       - name: Build
